# TDiG

./: .gitignore  LICENSE  METRICS_GUIDE.md  PLAN.md  README.md  pyproject.toml
data_cache_minimal_archive/: README.md
docs/: design_decisions.md  metric_definitions.md  reference_variants.md  reproduction.md  thesis.md
results/: RESULTS_v2.md  RESULTS_v3.md  canonical_vs_noncanonical.csv  per_cell_summary.csv  per_context_distributions.csv  splice_vs_intron.csv
results/L29_svd/: alignment_metrics.json  singular_values.csv
scripts/: 00_pull_cache.sh  01_environment_setup.sh  05_select_subset.py  10_compute_all_cells.py  10_population_stats.py  10b_calibrate_v2.py  11_smoke_batched.py  12_validate_pre_v.py  13_analyze_chr22_v2.py  14_visualize_chr22_v2.py  14b_zoom_layers_1_28.py  14c_advanced_viz.py  14d_investigations.py  14e_probing_and_metric_pca.py  14f_pc_biological_meaning.py  15_chr22_forward.py  16_chr17_forward.py  17_crossarch_forward.py  18_variant_forward.py  19_variant_analysis_scalars.py  20_gamma_ablation.py  20_run_gates.py  21_variant_per_consequence.py  22_chr17_replication.py  23_bootstrap_chr22_ci.py  24_variant_settling_cells.py  25_random_alt_control.py  26_variant_clustering.py  27_vus_reclassification.py  28_cryptic_synonymous_splice.py  29_context_separation_matrix.py  30_concordance.py  30_intron_outlier_discovery.py  31_L29_svd_mechanism.py  32_activation_patching.py  33_chr17_bootstrap.py  34_per_position_multitask.py  35_vus_feature_importance.py  36_hyenadna_crossarch.py  40_context_stratify.py  (+4 more)
tests/: test_imports.py
(+87 files in other folders)
